openshift/jellyfin-k8s/manifests/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: jellyfin
  namespace: media
  labels:
    app: jellyfin
spec:
  host: jellyfin.apps.openshift.thelab.lan
  to:
    kind: Service
    name: jellyfin
  port:
    targetPort: http
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
